--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .vertical-scroll::-webkit-scrollbar {
+      width: 2em;
+      height: 8px;
+    }
+  
+  .vertical-scroll::-webkit-scrollbar-track {
+    background: white;
+    border-radius: 100vw;
+    margin-block: 0.5em;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .vertical-scroll::-webkit-scrollbar-thumb {
+    background: #858585;
+    border: 0.25em ;
+    border-radius: 100vw;
   }
-  to {
-    transform: rotate(360deg);
+
+  
+
+  .sidebar-scroll::-webkit-scrollbar {
+    width: 0.5em;
+    height: 8px;
   }
-}
+
+  .sidebar-scroll::-webkit-scrollbar-track {
+    background: white;
+    border-radius: 100vw;
+    margin-block: 0.5em;
+  }
+
+  .sidebar-scroll::-webkit-scrollbar-thumb {
+    background: #858585;
+    border: 0.25em ;
+    border-radius: 100vw;
+  }
+
+
+  .content-scroll::-webkit-scrollbar {
+    width: 0.5em;
+    height: 8px;
+  }
+
+  .content-scroll::-webkit-scrollbar-track {
+    background: white;
+    border-radius: 100vw;
+    margin-block: 0.5em;
+  }
+
+  .content-scroll::-webkit-scrollbar-thumb {
+    background: #858585;
+    border: 0.25em ;
+    border-radius: 100vw;
+  }
+
+  .body{
+      -webkit-filter: blur(2px);
+      filter: blur(2px);
+  }
